--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,15 +12,18 @@
 
         <item name="frameBackgroundColor">@color/myBackgroundColor</item>
         <item name="chipStyle">@style/myChip</item>
-
-        <item name="fontFamily">@font/karantina_regular</item>
-        <item name="android:fontFamily">@font/karantina_regular</item>
+        <item name="textInputStyle">@style/myOutlinedBox</item>
+        <item name="tabStyle">@style/myTabs</item>
     </style>
 
     <style name="myChip" parent="@style/Widget.MaterialComponents.Chip.Choice">
         <item name="chipCornerRadius">16dp</item>
         <item name="chipStrokeColor">@color/color_primary_dark</item>
         <item name="chipStrokeWidth">2dp</item>
+    </style>
+
+    <style name="myTabs" parent="Widget.MaterialComponents.TabLayout.PrimarySurface">
+        <item name="tabSelectedTextColor">@color/design_default_color_on_primary</item>
     </style>
 
     <style name="Theme2" parent="Theme.POD">
