--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="settings_fragment_top_margin_content">8dp</dimen>
     <dimen name="settings_fragment_side_margin">8dp</dimen>
+    <dimen name="image_width">120dp</dimen>
+
+    <dimen name="image_final_width">32dp</dimen>
+    <dimen name="spacing_normal">16dp</dimen>
 </resources>
