--- a/app/src/main/res/layout/fragment_cosmos.xml
+++ b/app/src/main/res/layout/fragment_cosmos.xml
@@ -10,59 +10,51 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="@dimen/appBarHeight"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             >
 
-            <ImageView
-                android:id="@+id/main.imageview.placeholder"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/main.toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/quila2"
-                app:tint="#11000000"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.9"
-                />
-
-            <FrameLayout
-                android:id="@+id/main.framelayout.title"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom|center_horizontal"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@color/color_primary"
-                android:orientation="vertical"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.3"
+                android:layout_gravity="bottom"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark"
+                app:title=""
                 >
 
                 <LinearLayout
-                    android:id="@+id/main.linearlayout.title"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
                     >
 
+                    <Space
+                        android:layout_width="@dimen/image_final_width"
+                        android:layout_height="@dimen/image_final_width"
+                        />
+
                     <TextView
+                        android:id="@+id/main.textview.title"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="bottom|center"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="8dp"
+                        android:gravity="center_vertical"
                         android:text="@string/cosmos"
                         android:textColor="@android:color/white"
-                        android:textSize="30sp"
+                        android:textSize="20sp"
                         />
 
                 </LinearLayout>
-            </FrameLayout>
+            </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -71,7 +63,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        app:behavior_overlapTop="30dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
         >
@@ -92,57 +83,18 @@
                 android:textSize="18sp"
                 />
         </com.google.android.material.card.MaterialCardView>
-
-
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/main.toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_primary"
-        app:layout_anchor="@id/main.framelayout.title"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title=""
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
-
-            <Space
-                android:layout_width="@dimen/image_final_width"
-                android:layout_height="@dimen/image_final_width"
-                />
-
-            <TextView
-                android:id="@+id/main.textview.title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
-                android:gravity="center_vertical"
-                android:text="@string/cosmos"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                />
-
-        </LinearLayout>
-    </com.google.android.material.appbar.MaterialToolbar>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="@dimen/image_width"
-        android:layout_height="@dimen/image_width"
-        android:layout_gravity="center_horizontal"
+    <ImageView
+        android:id="@+id/main.imageview.placeholder"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal|top"
         android:src="@drawable/ic_cosmos"
-        app:border_color="@android:color/white"
-        app:border_width="2dp"
-        app:finalHeight="@dimen/image_final_width"
-        app:finalYPosition="2dp"
-        app:layout_behavior="com.example.pod.CosmosLayoutBehavior"
-        app:startHeight="2dp"
-        app:startToolbarPosition="2dp"
-        app:startXPosition="2dp"
+        app:layout_collapseMode="parallax"
+        android:paddingBottom="?attr/actionBarSize"
+        app:layout_behavior=".CosmosLayoutBehavior"
         />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
