--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -25,6 +25,8 @@
         android:id="@+id/marsPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"/>
+        android:layout_margin="4dp"
+        android:scaleType="centerInside"
+        />
 
 </LinearLayout>
