--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="image_final_width">32dp</dimen>
     <dimen name="spacing_normal">16dp</dimen>
     <dimen name="appBarHeight">300dp</dimen>
+    <dimen name="card_size">60dp</dimen>
+    <dimen name="card_corner_radius">70dp</dimen>
+    <dimen name="fab_radius">100dp</dimen>
 </resources>
