--- a/app/src/main/res/menu/menu_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_bar.xml
@@ -2,14 +2,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_bar_fav"
+        android:id="@+id/action_fav"
         android:icon="@drawable/ic_favourite_menu"
         android:title="@string/favourite"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/app_bar_settings"
+        android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_menu"
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_notes"
+        android:icon="@drawable/ic_note"
+        android:title="@string/notes"
+        app:showAsAction="ifRoom"
+        />
+
 </menu>
