--- a/app/src/main/res/layout/included_constraint_start.xml
+++ b/app/src/main/res/layout/included_constraint_start.xml
@@ -107,6 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textSize="22sp"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
